src/vype12/VYPe12Parser.java
// $ANTLR 3.4 C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g 2012-12-06 18:08:41

package vype12;

import vype12.ste.*;
import vype12.tac.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class VYPe12Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMA", "COMMENT", "DO", "ELSE", "EQUAL", "ESC_SEQ", "EXPONENT", "FLOAT", "HEX_DIGIT", "ID", "IF", "INT", "LBRACE", "LBRACKET", "MINUS", "MULTIPLY", "OCTAL_ESC", "PLUS", "RBRACE", "RBRACKET", "RETURN", "SEMICOLON", "STRING", "TYPE_CHAR", "TYPE_INT", "TYPE_STRING", "TYPE_VOID", "WHILE", "WS", "'!'", "'!='", "'%'", "'&&'", "'/'", "'<'", "'<='", "'=='", "'>'", "'>='", "'get_at'", "'print'", "'read_char()'", "'read_int()'", "'read_string()'", "'set_at'", "'strcat'", "'||'"
    };

    public static final int EOF=-1;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int CHAR=4;
    public static final int COMMA=5;
    public static final int COMMENT=6;
    public static final int DO=7;
    public static final int ELSE=8;
    public static final int EQUAL=9;
    public static final int ESC_SEQ=10;
    public static final int EXPONENT=11;
    public static final int FLOAT=12;
    public static final int HEX_DIGIT=13;
    public static final int ID=14;
    public static final int IF=15;
    public static final int INT=16;
    public static final int LBRACE=17;
    public static final int LBRACKET=18;
    public static final int MINUS=19;
    public static final int MULTIPLY=20;
    public static final int OCTAL_ESC=21;
    public static final int PLUS=22;
    public static final int RBRACE=23;
    public static final int RBRACKET=24;
    public static final int RETURN=25;
    public static final int SEMICOLON=26;
    public static final int STRING=27;
    public static final int TYPE_CHAR=28;
    public static final int TYPE_INT=29;
    public static final int TYPE_STRING=30;
    public static final int TYPE_VOID=31;
    public static final int WHILE=32;
    public static final int WS=33;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public VYPe12Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public VYPe12Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return VYPe12Parser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g"; }


        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            // Now do something with hdr and msg...
            throw new SyntaxException("Syntax exception: "+hdr+" "+msg+".");
        }



    // $ANTLR start "vype12"
    // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:42:1: vype12 : ( global )* EOF ;
    public final void vype12() throws RecognitionException {
        try {
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:42:8: ( ( global )* EOF )
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:42:10: ( global )* EOF
            {
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:42:10: ( global )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= TYPE_CHAR && LA1_0 <= TYPE_VOID)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:42:10: global
            	    {
            	    pushFollow(FOLLOW_global_in_vype1251);
            	    global();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            match(input,EOF,FOLLOW_EOF_in_vype1254); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "vype12"



    // $ANTLR start "global"
    // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:43:1: global : functions ;
    public final void global() throws RecognitionException {
        try {
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:43:8: ( functions )
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:43:10: functions
            {
            pushFollow(FOLLOW_functions_in_global61);
            functions();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "global"



    // $ANTLR start "functions"
    // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:45:1: functions : ( definition | declaration );
    public final void functions() throws RecognitionException {
        try {
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:46:2: ( definition | declaration )
            int alt2=2;
            switch ( input.LA(1) ) {
            case TYPE_CHAR:
                {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    int LA2_5 = input.LA(3);

                    if ( (LA2_5==LBRACKET) ) {
                        switch ( input.LA(4) ) {
                        case TYPE_CHAR:
                            {
                            int LA2_7 = input.LA(5);

                            if ( (LA2_7==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_7==COMMA||LA2_7==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 7, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_INT:
                            {
                            int LA2_8 = input.LA(5);

                            if ( (LA2_8==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_8==COMMA||LA2_8==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 8, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_STRING:
                            {
                            int LA2_9 = input.LA(5);

                            if ( (LA2_9==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_9==COMMA||LA2_9==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 9, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_VOID:
                            {
                            switch ( input.LA(5) ) {
                            case ID:
                                {
                                alt2=1;
                                }
                                break;
                            case RBRACKET:
                                {
                                int LA2_13 = input.LA(6);

                                if ( (LA2_13==LBRACE) ) {
                                    alt2=1;
                                }
                                else if ( (LA2_13==SEMICOLON) ) {
                                    alt2=2;
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 2, 13, input);

                                    throw nvae;

                                }
                                }
                                break;
                            case COMMA:
                                {
                                alt2=2;
                                }
                                break;
                            default:
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 10, input);

                                throw nvae;

                            }

                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 2, 6, input);

                            throw nvae;

                        }

                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 5, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }
                }
                break;
            case TYPE_INT:
                {
                int LA2_2 = input.LA(2);

                if ( (LA2_2==ID) ) {
                    int LA2_5 = input.LA(3);

                    if ( (LA2_5==LBRACKET) ) {
                        switch ( input.LA(4) ) {
                        case TYPE_CHAR:
                            {
                            int LA2_7 = input.LA(5);

                            if ( (LA2_7==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_7==COMMA||LA2_7==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 7, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_INT:
                            {
                            int LA2_8 = input.LA(5);

                            if ( (LA2_8==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_8==COMMA||LA2_8==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 8, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_STRING:
                            {
                            int LA2_9 = input.LA(5);

                            if ( (LA2_9==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_9==COMMA||LA2_9==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 9, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_VOID:
                            {
                            switch ( input.LA(5) ) {
                            case ID:
                                {
                                alt2=1;
                                }
                                break;
                            case RBRACKET:
                                {
                                int LA2_13 = input.LA(6);

                                if ( (LA2_13==LBRACE) ) {
                                    alt2=1;
                                }
                                else if ( (LA2_13==SEMICOLON) ) {
                                    alt2=2;
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 2, 13, input);

                                    throw nvae;

                                }
                                }
                                break;
                            case COMMA:
                                {
                                alt2=2;
                                }
                                break;
                            default:
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 10, input);

                                throw nvae;

                            }

                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 2, 6, input);

                            throw nvae;

                        }

                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 5, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 2, input);

                    throw nvae;

                }
                }
                break;
            case TYPE_STRING:
                {
                int LA2_3 = input.LA(2);

                if ( (LA2_3==ID) ) {
                    int LA2_5 = input.LA(3);

                    if ( (LA2_5==LBRACKET) ) {
                        switch ( input.LA(4) ) {
                        case TYPE_CHAR:
                            {
                            int LA2_7 = input.LA(5);

                            if ( (LA2_7==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_7==COMMA||LA2_7==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 7, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_INT:
                            {
                            int LA2_8 = input.LA(5);

                            if ( (LA2_8==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_8==COMMA||LA2_8==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 8, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_STRING:
                            {
                            int LA2_9 = input.LA(5);

                            if ( (LA2_9==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_9==COMMA||LA2_9==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 9, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_VOID:
                            {
                            switch ( input.LA(5) ) {
                            case ID:
                                {
                                alt2=1;
                                }
                                break;
                            case RBRACKET:
                                {
                                int LA2_13 = input.LA(6);

                                if ( (LA2_13==LBRACE) ) {
                                    alt2=1;
                                }
                                else if ( (LA2_13==SEMICOLON) ) {
                                    alt2=2;
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 2, 13, input);

                                    throw nvae;

                                }
                                }
                                break;
                            case COMMA:
                                {
                                alt2=2;
                                }
                                break;
                            default:
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 10, input);

                                throw nvae;

                            }

                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 2, 6, input);

                            throw nvae;

                        }

                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 5, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 3, input);

                    throw nvae;

                }
                }
                break;
            case TYPE_VOID:
                {
                int LA2_4 = input.LA(2);

                if ( (LA2_4==ID) ) {
                    int LA2_5 = input.LA(3);

                    if ( (LA2_5==LBRACKET) ) {
                        switch ( input.LA(4) ) {
                        case TYPE_CHAR:
                            {
                            int LA2_7 = input.LA(5);

                            if ( (LA2_7==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_7==COMMA||LA2_7==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 7, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_INT:
                            {
                            int LA2_8 = input.LA(5);

                            if ( (LA2_8==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_8==COMMA||LA2_8==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 8, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_STRING:
                            {
                            int LA2_9 = input.LA(5);

                            if ( (LA2_9==ID) ) {
                                alt2=1;
                            }
                            else if ( (LA2_9==COMMA||LA2_9==RBRACKET) ) {
                                alt2=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 9, input);

                                throw nvae;

                            }
                            }
                            break;
                        case TYPE_VOID:
                            {
                            switch ( input.LA(5) ) {
                            case ID:
                                {
                                alt2=1;
                                }
                                break;
                            case RBRACKET:
                                {
                                int LA2_13 = input.LA(6);

                                if ( (LA2_13==LBRACE) ) {
                                    alt2=1;
                                }
                                else if ( (LA2_13==SEMICOLON) ) {
                                    alt2=2;
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 2, 13, input);

                                    throw nvae;

                                }
                                }
                                break;
                            case COMMA:
                                {
                                alt2=2;
                                }
                                break;
                            default:
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 10, input);

                                throw nvae;

                            }

                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 2, 6, input);

                            throw nvae;

                        }

                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 5, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 4, input);

                    throw nvae;

                }
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:46:4: definition
                    {
                    pushFollow(FOLLOW_definition_in_functions70);
                    definition();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:47:4: declaration
                    {
                    pushFollow(FOLLOW_declaration_in_functions75);
                    declaration();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "functions"



    // $ANTLR start "declaration"
    // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:49:1: declaration : dt= dataType ID LBRACKET ( declarationDataTypes ) RBRACKET SEMICOLON ;
    public final void declaration() throws RecognitionException {
        Token ID1=null;
        DataTypes dt =null;


        try {
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:50:2: (dt= dataType ID LBRACKET ( declarationDataTypes ) RBRACKET SEMICOLON )
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:50:4: dt= dataType ID LBRACKET ( declarationDataTypes ) RBRACKET SEMICOLON
            {
            pushFollow(FOLLOW_dataType_in_declaration86);
            dt=dataType();

            state._fsp--;


            ID1=(Token)match(input,ID,FOLLOW_ID_in_declaration88); 

            match(input,LBRACKET,FOLLOW_LBRACKET_in_declaration90); 

            SymbolTable.getInstance().pushLevel();

            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:50:69: ( declarationDataTypes )
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:50:70: declarationDataTypes
            {
            pushFollow(FOLLOW_declarationDataTypes_in_declaration95);
            declarationDataTypes();

            state._fsp--;


            }


            match(input,RBRACKET,FOLLOW_RBRACKET_in_declaration98); 

            SymbolTable.getInstance().addFunctionDeclaration(dt, (ID1!=null?ID1.getText():null));

            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_declaration102); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "declaration"



    // $ANTLR start "declarationDataTypes"
    // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:52:1: declarationDataTypes : dt= dataType ( COMMA dataType )* ;
    public final void declarationDataTypes() throws RecognitionException {
        DataTypes dt =null;


        try {
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:53:2: (dt= dataType ( COMMA dataType )* )
            // C:\\Users\\Milan\\Documents\\VUT\\VYPe\\projekt\\VYP01\\frontend\\src\\vype12\\VYPe12.g:53:4: dt= dataType ( COMMA dataType )*
            {
            pushFollow(FOLLOW_dataType_in_declarationDataTypes113);
            dt=dataType();

            state._fsp--;


            SymbolTable.getInstance().addVariable(dt);
